Bug 1680505 - Ship WebRender to GNOME/Wayland users to release, excluding XWayland. r=jrmuizel

Wayland users are explicitly opting in to use it via MOZ_ENABLE_WAYLAND.
We should give them WebRender if we would otherwise given it on X11.

Differential Revision: https://phabricator.services.mozilla.com/D98603